# secure_monitoring_service_pkg

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.dvc/: config
analysis/: analyze_performance_data_from_benchmark.R  reduce_avoid_list.R
analysis/report_path_lists/: README.md
analysis/spyder/: analysis_of_autoimmune_direct.ipynb  analysis_of_hidden_hijack_cdn_subprefix_hijack.ipynb  analyze_avoid_list.py  analyze_direct_autoimmune_attack.py  analyze_incentive.py  analyze_relay_connectivity.py  artemis_plot_generator_compare.py  autoimmune_direct_attack_relay_paper_plot.py  autoimmune_direct_no_relay_paper_plot.py  autoimmune_direct_with_relay_paper_plot.py  autoimmune_indirect_attack_relay_paper_plot.py  autoimmune_indirect_with_relay_paper_plot.py  basic_subprefix_hijack_plot.py  compare_subprefix_attack_relay_no_attack.py  data_manager.py  relay_outcomes_plots.py  special_subprefix_no_relay_paper_plot.py  subprefix_attack_relay_paper_plot.py  subprefix_compare_attack_relay_paper_plot.py  subprefix_compare_relays_plot.py  subprefix_no_relay_paper_plot.py  subprefix_with_relay_paper_compare_policies.py  subprefix_with_relay_paper_plot.py  superprefix_attack_relay_paper_plot.py  superprefix_no_relay_paper_plot.py  superprefix_with_relay_paper_plot.py  v4_graph_generator.py
data/graphs/: .gitignore  archive_depricated.sh  migrate_data.py  mk_results_dirs.sh  move_metadata.sh  organize_results.sh  rename.sh  status.sh  (+6 more)
lib_secure_monitoring_service/: __init__.py  __main__.py  deterministic_runs.sh  engine_inputs.py  mvdp.py  report.py  rov_sms.py  sim_logger.py  split_collection.sh  trusted_server.py  v4_graph.py  v4_scenario.py
scripts/: as_rank_v2_parser.py  convert_rov_json_to_csv.py  create_rov_adoption_files.py  create_rov_real_csv.sh  max_asn.py  run_select_random_ases.sh  run_test_coverage.sh  select_random_ases.py  test_main.sh  topology_stats.py  update_bgp_immunity_paper.sh  update_design_doc_system_test.sh  update_paper_results.sh  update_results_doc.sh
secure_monitoring_service_pkg/: __init__.py  __main__.py  engine_inputs.py  metadata_collector.py  mvdp.py  rov_sms.py  run_main.sh  sim_logger.py  test_main.sh  trusted_server.py  v4_graph.py  v4_scenario.py
(+1086 files in other folders)
